--- a/ImagePickerExperiment/Base.lproj/Main.storyboard
+++ b/ImagePickerExperiment/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ImagePickerExperiment" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,94 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RWP-vS-Tbp">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="action" id="G3U-xm-Yg2">
+                                        <connections>
+                                            <action selector="shareImage:" destination="BYZ-38-t0r" id="dGp-HV-O1c"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="elU-3R-0Mf">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="2Mi-Y8-2Rn">
+                                <rect key="frame" x="66" y="83" width="243" height="53"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="ui6-oj-p4C"/>
+                                    <constraint firstAttribute="width" constant="243" id="vxW-to-VOS"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PP4-ME-RCv">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="cCG-Jw-x6B"/>
+                                    <barButtonItem systemItem="camera" id="ybO-Mz-wSA">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="dkx-z0-nzr" id="7cH-c5-gXp"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9Te-mq-DNQ"/>
+                                    <barButtonItem title="Album" id="j92-Ja-E80">
+                                        <connections>
+                                            <action selector="pickAnImageFromAlbum:" destination="dkx-z0-nzr" id="mvi-20-fAL"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="mYv-f1-1Gf"/>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="346-s0-Lao">
+                                <rect key="frame" x="66" y="541" width="243" height="53"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="poN-Bi-ZAE"/>
+                                    <constraint firstAttribute="width" constant="243" id="qk6-yr-g7k"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="RWP-vS-Tbp" firstAttribute="leading" secondItem="elU-3R-0Mf" secondAttribute="leading" id="9jF-LL-Kze"/>
+                            <constraint firstAttribute="trailing" secondItem="elU-3R-0Mf" secondAttribute="trailing" id="AaM-ld-mVL"/>
+                            <constraint firstItem="346-s0-Lao" firstAttribute="leading" secondItem="2Mi-Y8-2Rn" secondAttribute="leading" id="F1h-AW-Pfi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="elU-3R-0Mf" secondAttribute="bottom" constant="44" id="HtB-qx-9vT"/>
+                            <constraint firstItem="elU-3R-0Mf" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="44" id="M3j-XC-Qm2"/>
+                            <constraint firstItem="PP4-ME-RCv" firstAttribute="top" secondItem="elU-3R-0Mf" secondAttribute="bottom" id="MgT-nH-4LK"/>
+                            <constraint firstItem="PP4-ME-RCv" firstAttribute="top" secondItem="346-s0-Lao" secondAttribute="bottom" constant="29" id="byr-4x-soE"/>
+                            <constraint firstItem="2Mi-Y8-2Rn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iGV-hf-lk3"/>
+                            <constraint firstItem="RWP-vS-Tbp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="iMQ-h4-8jL"/>
+                            <constraint firstItem="RWP-vS-Tbp" firstAttribute="trailing" secondItem="elU-3R-0Mf" secondAttribute="trailing" id="jiZ-ZZ-cgb"/>
+                            <constraint firstItem="RWP-vS-Tbp" firstAttribute="trailing" secondItem="PP4-ME-RCv" secondAttribute="trailing" id="jwh-Hj-Hg1"/>
+                            <constraint firstItem="RWP-vS-Tbp" firstAttribute="leading" secondItem="PP4-ME-RCv" secondAttribute="leading" id="mUr-qB-y0r"/>
+                            <constraint firstItem="PP4-ME-RCv" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="pVL-lu-gRv"/>
+                            <constraint firstItem="2Mi-Y8-2Rn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="63" id="tOl-wc-p3H"/>
+                            <constraint firstItem="elU-3R-0Mf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uc6-i1-HSB"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomToolbar" destination="PP4-ME-RCv" id="WuD-Fk-9zE"/>
+                        <outlet property="cameraButton" destination="ybO-Mz-wSA" id="dBc-qG-dX3"/>
+                        <outlet property="firstTextField" destination="2Mi-Y8-2Rn" id="n8p-fQ-Dg7"/>
+                        <outlet property="imagePickView" destination="elU-3R-0Mf" id="vib-k1-O1U"/>
+                        <outlet property="secondTextField" destination="346-s0-Lao" id="s1A-kZ-TKl"/>
+                        <outlet property="shareButton" destination="G3U-xm-Yg2" id="KOp-y7-LGm"/>
+                        <outlet property="topToolbar" destination="RWP-vS-Tbp" id="Wwa-aJ-DzE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="31.199999999999999" y="36.431784107946029"/>
         </scene>
     </scenes>
 </document>
